# simple_chat_bot_uv

./: README.md  conversation_memory.json  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  future_upgrades.txt  main.py  memories.db  original_license.md  pyproject.toml  recent_updates.md  upgrade.py
